[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/art/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://hazards/portal.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/portal_in.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/portal_out.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/portal_spawn.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 192, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "end"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("portal:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_life"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("portal:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_set_active"
} ]
}

[node name="portal" type="Node2D"]
script = ExtResource( 2 )

[node name="portal" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
frame = 1
playing = true
offset = Vector2( 0, -9 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/end = SubResource( 8 )
anims/spawn = SubResource( 9 )

[node name="life_timer" type="Timer" parent="."]
one_shot = true

[node name="transports" type="Node2D" parent="."]

[node name="portal_in" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "sfx"

[node name="portal_spawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "sfx"

[node name="portal_out" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"
[connection signal="timeout" from="life_timer" to="." method="_on_life_timer_timeout"]
